# confetti

./: .gitignore  CODE_OF_CONDUCT  CONTRIBUTING.md  LICENSE  README.md  a.yaml  b.json  confetti.yaml  pyproject.toml  pyproject.toml.bak  spec.md
.cursor/rules/: python-library-standards-and-conventions.mdc
.github/workflows/: tests.yml
confetti/: __init__.py
confetti/cli/: __main__.py
confetti/core/: __init__.py  config.py  config_loader.py  environment.py  filters.py  merge.py  source.py  types.py
confetti/sources/: __init__.py  env_file.py  github_env.py
scripts/: release.sh
src/confetti/: dotenv.py
src/confetti/core/: config_loader.py  environment.py  filters.py  merge.py  source.py  types.py
src/confetti/sources/: __init__.py  env_file.py  ini_file.py  json_file.py  redis_kv.py  yaml_file.py
tests/: test_config.py  test_config_loader.py  test_environment.py  test_filters.py  test_sources.py
tests/fixtures/: c.ini  config.ini  database.yaml  service.json
